# foresight-provider-match-api

./: .dockerignore  .env  .env.example  Dockerfile  FRONTEND_STATUS.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  config.py  deps.py  main.py  models.py  schemas.py  seed.py
app/routers/: appointments.py  auth.py  matches.py  providers.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.jsx  styles.css
frontend/src/api/: appointmentsApi.js  authApi.js  client.js  matchesApi.js  providersApi.js
frontend/src/components/: AdminRoute.jsx  AppointmentSlotPicker.jsx  DemoBanner.jsx  Navbar.jsx  ProtectedRoute.jsx  ProviderCard.jsx  ProviderFilters.jsx  StatusBadge.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminAppointmentsPage.jsx  AppointmentConfirmationPage.jsx  LoginPage.jsx  MatchPage.jsx  MyAppointmentsPage.jsx  ProviderDetailPage.jsx  ProviderListPage.jsx
frontend/src/utils/: formatDate.js
