[project]
name = "foresight-provider-match-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
